--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Font awesome icon link --->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <!--Boostrap cdn--->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+     <!--Css cdn--->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello world</h1>
+    <header>
+        <div class="website-header">
+            <img src="./image/logo.png" alt="logo">
+            <h1>NEWS TODAY</h1>
+            <div class="social-icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-google-plus-square"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fas fa-rss"></i>
+            </div>
+        </div>
+
+        <nav class="navbar navbar-expand-sm">
+            <!--Toggler/collapsible Button-->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+
+            <!--Navbar links-->
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                    <a class="nav-link"href="#">home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">politics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">world</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">buiseness</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">travel</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">technology</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">sports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">cars</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">videos</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>          
+    </header>
+    <div class="breaking-news-section">
+        <span id="btext">Breaking News</span>
+        <marquee direction="left">
+            <a href="#" class="breaking-news">
+                <p class="bntime">15 July 2021</p>
+                Congress under pressure to reach a deal
+            </a>
+            <a href="#" class="breaking-news">
+                <p class="bntime">16 July 2021</p>
+                Powerful laser beam is helping track down the moon.
+            </a>
+            <a href="#" class="breaking-news">
+                <p class="bntime">17 July 2021</p>
+                Snowstorm buries pacific Northwest, with more on the way.
+            </a>
+        </marquee>
+    </div>
+
 
 
 
