--- a/index.html
+++ b/index.html
@@ -60,25 +60,102 @@
                     </li>
                 </ul>
             </div>
-        </nav>          
+        </nav>
+        <div class="breaking-news-section">
+            <span id="btext">Breaking News</span>
+            <marquee direction="left" onmouseover="this.stop()" onmouseout="this.start()">
+                <a href="#" class="breaking-news">
+                    <p class="bntime">15 July 2021</p>
+                    Congress under pressure to reach a deal
+                </a>
+                <a href="#" class="breaking-news">
+                    <p class="bntime">16 July 2021</p>
+                    Powerful laser beam is helping track down the moon.
+                </a>
+                <a href="#" class="breaking-news">
+                    <p class="bntime">17 July 2021</p>
+                    Snowstorm buries pacific Northwest, with more on the way.
+                </a>
+            </marquee>
+        </div>    
     </header>
-    <div class="breaking-news-section">
-        <span id="btext">Breaking News</span>
-        <marquee direction="left">
-            <a href="#" class="breaking-news">
-                <p class="bntime">15 July 2021</p>
-                Congress under pressure to reach a deal
-            </a>
-            <a href="#" class="breaking-news">
-                <p class="bntime">16 July 2021</p>
-                Powerful laser beam is helping track down the moon.
-            </a>
-            <a href="#" class="breaking-news">
-                <p class="bntime">17 July 2021</p>
-                Snowstorm buries pacific Northwest, with more on the way.
-            </a>
-        </marquee>
-    </div>
+    
+    <main>
+        <article id="popular-news">
+            <div id="featured">
+                <h2>FEATURED</h2>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="./image/carousel1.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet.</h5>
+                            <p>15 July 2021</p>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./image/carousel2.jpg" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet. </h5>
+                            <p>15 July 2021</p>
+                          </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="./image/carousel3.jpg" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</h5>
+                            <p>15 July 2021</p>
+                          </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+            </div>
+            <div id="latest">
+                <h2>LATEST</h2>
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./image/carousel1.jpg" alt="lates">
+                        <p class="carousel-text">This floating entertainment hub</p>
+                    </div>
+                </section>
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./image/carousel2.jpg" alt="lates">
+                        <p class="carousel-text">Repurposed Boeing</p>
+                    </div>
+                </section>
+            </div>
+            <div id="our-picks">
+                <h2>OUR PICKS</h2>
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./image/carousel3.jpg" alt="lates">
+                        <p class="carousel-text">Repurposed Boeing</p>
+                    </div>
+                </section>
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./image/carousel1.jpg" alt="lates">
+                        <p class="carousel-text">This floating entertainment hub</p>
+                    </div>
+                </section>
+            </div>
+        </article>
+    </main>
+   
 
 
 
