Worked on aside and social links section

--- a/index.html
+++ b/index.html
@@ -154,17 +154,89 @@
                 </section>
             </div>
         </article>
+        <section class="more-news">
+            <div class="news-section">
+                <article class="world">
+                    <h2>WORLD</h2>
+                    <img src="./image/world1.jpg" alt="World">
+                    <h3>Syria crisis: Obama rejects US military intervention</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, veniam?</p>
+                </article>
+                <article class="sport">
+                    <h2>SPORT</h2>
+                    <img src="./image/sport1.jpg" alt="Sport">
+                    <h3>Lisboa Triathlon 2017</h3>
+                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, quis?</P>
+                </article>
+            </div>
+            <aside>
+                <h4>RECENT</h4>
+                <div class="recent-news">
+                    <img src="./image/article1.jpg" alt="article1">
+                    <p>2018 Mercedes_AMG C63 Cup Makes it Debut</p>
+                </div>
+                <div class="recent-news">
+                    <img src="./image/aside2.jpg" alt="article1">
+                    <p>2018 Mercedes_AMG C63 Cup Makes it Debut</p>
+                    
+                </div>
+                <div class="recent-news">
+                    <img src="./image/aside3.jpg" alt="article1">
+                    <p>2018 Mercedes_AMG C63 Cup Makes it Debut</p>
+                </div>
+                <div class="recent-news">
+                    <img src="./image/aside4.jpg" alt="article1">
+                    <p>2018 Mercedes_AMG C63 Cup Makes it Debut</p>
+                </div>
+                <div class="recent-news">
+                    <img src="./image/aside5.jpg" alt="article1">
+                    <p>2018 Mercedes_AMG C63 Cup Makes it Debut</p>
+                </div>
+            </aside>
+        </section>
     </main>
-   
+    <footer>
+        <div class="social-links">
+            <section class="about">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium illo placeat culpa nostrum enim voluptas at voluptatem est ea deleniti dolore, cumque fuga quisquam illum, provident excepturi, inventore facere eligendi repellendus distinctio obcaecati? Voluptatibus, sit tempora, reprehenderit harum ducimus eos eaque veniam velit tenetur nobis reiciendis incidunt eum. Voluptatem, natus?</p>
+                <div class="social-icons-footer">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-google-plus-square"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fas fa-rss-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fas fa-rss-square"></i>
+                    <i class="fab fa-pinterest-square"></i>
+                    <i class="fab fa-linkedin"></i>
+                </div>
+
+            </section>
+            <section class="instagram">
+                <h2>Instagram</h2>
+                <img src="./image/aside2.jpg" alt="aside2">
+                <img src="./image/aside3.jpg" alt="aside3">
+                <img src="./image/aside4.jpg" alt="aside4">
+                <img src="./image/aside5.jpg" alt="aside5">
+                <img src="./image/aside2.jpg" alt="aside2">
+                <img src="./image/aside3.jpg" alt="aside3">
+                <img src="./image/aside4.jpg" alt="aside4">
+                <img src="./image/aside5.jpg" alt="aside5">
+                <img src="./image/aside2.jpg" alt="aside2">
+                <button type="button" class="footer-buttons">View on Instagram</button>
 
 
-
-
-
-
-
-   
-
+            </section>
+            <section class="subscribe">
+                <h2>Subscribe to news today</h2>
+                <p>Enter your email address to subscribe this blog and recieve notifications of new posts by email</p>
+                <input type="email" placeholder="Email address">
+                <button type="button" class="footer-buttons">Subscribe</button>
+            </section>
+        </div>
+        <div class="copy-right">copyright &copy; 2021 News Today      Roshan Dahal</div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
